--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -389,14 +389,14 @@ PhysicsConstraintComponent="\"Object\" \"Object.Constraint.ComponentName1\" \"Ob
 PhysicsConstraint_BP_C="\"Object.ConstraintActor.ConstraintComp.Object.Constraint.ComponentName1\" \"Object.ConstraintActor.ConstraintComp.Object.Constraint.ComponentName2\" "
 PhysicsConstraintActor="\"Object.ConstraintActor.ConstraintComp.Object.Constraint.ComponentName1\" \"Object.ConstraintActor.ConstraintComp.Object.Constraint.ComponentName2\" "
 RigidBodyBase="\"Object.ConstraintActor.ConstraintComp.Object.Constraint.ComponentName1\" \"Object.ConstraintActor.ConstraintComp.Object.Constraint.ComponentName2\" "
-ChildActorComponent="\"Object\" \"Object.ChildActorComponent.ChildActorTemplate\" \"Object.ChildActorComponent.ChildActorTemplate.Object.Tick\" \"Object.ChildActorComponent.ChildActorTemplate.Object.Tick.PrimaryActorTick\" \"Object.ChildActorComponent.ChildActorTemplate.Object.Replication\" \"Object.ChildActorComponent.ChildActorTemplate.Object.Replication.ReplicatedMovement\" \"Object.ChildActorComponent.ChildActorTemplate.Object.Actor\" \"Object.ChildActorComponent.ChildActorTemplate.Object.Actor.Tags\" \"Object.ChildActorComponent.ChildActorTemplate.Object.Cooking\" \"Object.ChildActorComponent.ChildActorTemplate.Object.DataLayers\" \"Object.Tags.ComponentTags\" "
+ChildActorComponent="\"Object\" \"Object.ChildActorComponent.ChildActorTemplate\" \"Object.ChildActorComponent.ChildActorTemplate.Object.Default\" \"Object.ChildActorComponent.ChildActorTemplate.Object.DataLayers\" \"Object.ChildActorComponent.ChildActorTemplate.Object.Tick\" \"Object.ChildActorComponent.ChildActorTemplate.Object.Tick.PrimaryActorTick\" \"Object.ChildActorComponent.ChildActorTemplate.Object.Replication\" \"Object.ChildActorComponent.ChildActorTemplate.Object.Replication.ReplicatedMovement\" \"Object.ChildActorComponent.ChildActorTemplate.Object.Actor\" \"Object.ChildActorComponent.ChildActorTemplate.Object.Actor.Tags\" \"Object.ChildActorComponent.ChildActorTemplate.Object.Cooking\" \"Object.Tags.ComponentTags\" "
 InputAction="\"Object\" "
 InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[3]\" \"Object.Mappings.Mappings.Mappings[4]\" \"Object.Mappings.Mappings.Mappings[4].Modifiers\" \"Object.Mappings.Mappings.Mappings[5]\" \"Object.Mappings.Mappings.Mappings[5].Modifiers\" "
 PlayerController_BP_C=
 PlayerController=
 Controller=
-Puppet_BP_C=
-Character=
+Puppet_BP_C="\"Object\" "
+Character="\"Object\" "
 WrapBox="\"Object\" "
 PanelWidget="\"Object\" "
 TextBlock="\"Object\" "
@@ -419,10 +419,11 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
@@ -447,6 +448,7 @@ OpenAssetsAtExit=/Game/Blueprints/Planet3_BP.Planet3_BP
 OpenAssetsAtExit=/Game/Blueprints/Planet2_BP.Planet2_BP
 OpenAssetsAtExit=/Game/Blueprints/Button_BP.Button_BP
 OpenAssetsAtExit=/Game/Blueprints/Area_BP.Area_BP
+OpenAssetsAtExit=/Game/Blueprints/Planet1_BP.Planet1_BP
 
 [RootWindow]
 ScreenPosition=X=-1274.000 Y=254.000
@@ -1957,7 +1959,7 @@ CapsuleComponent=PhysicsConstraintComponent.Constraint Behavior.Projection,Physi
 StaticMeshActor=StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.HUDs,PropertyWrapper.DefaultValueCategory.MazeBP,PropertyWrapper.DefaultValueCategory.Musics,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,DefaultPawn.Collision.Collision
 Blueprint=
 StaticGravityCharacter_C=StaticMeshComponent.Collision.Collision
-SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.HUDs,PropertyWrapper.DefaultValueCategory.MazeBP,PropertyWrapper.DefaultValueCategory.Musics,PropertyWrapper.DefaultValueCategory.DetectionTypes,PropertyWrapper.DefaultValueCategory.IgnoreTypes,PhysicsConstraintComponent.Constraint Behavior.Projection,PhysicsConstraintComponent.Constraint Behavior.ShockPropagation,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.TransformCommon.Transform,PhysicsConstraint_BP_C.Constraint Behavior.Projection,PhysicsConstraint_BP_C.Angular Limits.Swing Limits,PhysicsConstraint_BP_C.Angular Limits.Twist Limits,PhysicsConstraint_BP_C.AngularMotor.Orientation Drive,PhysicsConstraint_BP_C.AngularMotor.Velocity Drive,PhysicsConstraint_BP_C.LinearMotor.Linear Position Drive,PhysicsConstraint_BP_C.LinearMotor.Linear Velocity Drive,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,DefaultPawn.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.DetectionTypes,K2Node_VariableGet.DefaultValueCategory.IgnoreTypes,K2Node_VariableSet.DefaultValueCategory.IgnoreTypes
+SkeletalMeshComponent=
 GravityMovementComponent=StaticMeshComponent.Collision.Collision
 BP_HumanGravityCharacter_C=StaticMeshComponent.Collision.Collision
 Character_BP_C=StaticMeshComponent.Collision.Collision
@@ -2009,35 +2011,36 @@ Piston_BP_C=
 Area_BP_C=PropertyWrapper.DefaultValueCategory.HUDs,PropertyWrapper.DefaultValueCategory.MazeBP,PropertyWrapper.DefaultValueCategory.Musics,PropertyWrapper.DefaultValueCategory.DetectionTypes,PropertyWrapper.DefaultValueCategory.IgnoreTypes,PhysicsConstraintComponent.Constraint Behavior.Projection,PhysicsConstraintComponent.Constraint Behavior.ShockPropagation,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.TransformCommon.Transform,PhysicsConstraint_BP_C.Constraint Behavior.Projection,PhysicsConstraint_BP_C.Angular Limits.Swing Limits,PhysicsConstraint_BP_C.Angular Limits.Twist Limits,PhysicsConstraint_BP_C.AngularMotor.Orientation Drive,PhysicsConstraint_BP_C.AngularMotor.Velocity Drive,PhysicsConstraint_BP_C.LinearMotor.Linear Position Drive,PhysicsConstraint_BP_C.LinearMotor.Linear Velocity Drive,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,DefaultPawn.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.DetectionTypes,K2Node_VariableGet.DefaultValueCategory.IgnoreTypes,K2Node_VariableSet.DefaultValueCategory.IgnoreTypes
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/Planet2_BP
-MRUItem1=/Game/Blueprints/PlanetObject_BP
+MRUItem0=/Game/Blueprints/Camera_BP
+MRUItem1=/Game/Blueprints/Planet1_BP
 MRUItem2=/Game/Blueprints/Area_BP
-MRUItem3=/Game/Blueprints/Piston_BP
-MRUItem4=/Game/Blueprints/Planet3_BP
-MRUItem5=/Game/Blueprints/Planet1_BP
-MRUItem6=/Game/Blueprints/Door_BP
-MRUItem7=/Game/Blueprints/Button_BP
-MRUItem8=/Game/Input/IMC
-MRUItem9=/Game/Blueprints/GMB_BP
-MRUItem10=/Game/Blueprints/GameInstance_BP
-MRUItem11=/Game/Blueprints/PlayerController_BP
-MRUItem12=/Game/Blueprints/PlanetPawn_BP
-MRUItem13=/Game/Blueprints/Puppet_BP
-MRUItem14=/Game/Input/IA_PuppetJump
-MRUItem15=/Game/Input/IA_MoveLeftRight
-MRUItem16=/Game/Input/IA_RotatePlanet
-MRUItem17=/Game/Maps/Maze
-MRUItem18=/Game/Model/Sackboy/Sackboy_Physics
-MRUItem19=/Game/Blueprints/HUD_Playing_BP
-MRUItem20=/Game/Blueprints/SackboyAnimation_BP
-MRUItem21=/Game/Maps/Menu
-MRUItem22=/Game/Input/IA_GripObject
-MRUItem23=/Game/Animation/Sackboy/Falling_Idle_Anim
-MRUItem24=/Game/Blueprints/PuppetState_Enum
-MRUItem25=/Game/Model/Sackboy/Sackboy_Skeleton
-MRUItem26=/Game/Animation/Sackboy/Running_Anim
-MRUItem27=/Game/Model/Sackboy/Sackboy_SkeMesh
-MRUItem28=/Game/Animation/Sackboy/Happy_Idle_Anim
+MRUItem3=/Game/Blueprints/Button_BP
+MRUItem4=/Game/Blueprints/Planet2_BP
+MRUItem5=/Game/Blueprints/Planet3_BP
+MRUItem6=/Game/Blueprints/GameInstance_BP
+MRUItem7=/Game/Blueprints/PlanetPawn_BP
+MRUItem8=/Game/Blueprints/Puppet_BP
+MRUItem9=/Game/Blueprints/PlanetObject_BP
+MRUItem10=/Game/Blueprints/Piston_BP
+MRUItem11=/Game/Blueprints/Door_BP
+MRUItem12=/Game/Input/IMC
+MRUItem13=/Game/Blueprints/GMB_BP
+MRUItem14=/Game/Blueprints/PlayerController_BP
+MRUItem15=/Game/Input/IA_PuppetJump
+MRUItem16=/Game/Input/IA_MoveLeftRight
+MRUItem17=/Game/Input/IA_RotatePlanet
+MRUItem18=/Game/Maps/Maze
+MRUItem19=/Game/Model/Sackboy/Sackboy_Physics
+MRUItem20=/Game/Blueprints/HUD_Playing_BP
+MRUItem21=/Game/Blueprints/SackboyAnimation_BP
+MRUItem22=/Game/Maps/Menu
+MRUItem23=/Game/Input/IA_GripObject
+MRUItem24=/Game/Animation/Sackboy/Falling_Idle_Anim
+MRUItem25=/Game/Blueprints/PuppetState_Enum
+MRUItem26=/Game/Model/Sackboy/Sackboy_Skeleton
+MRUItem27=/Game/Animation/Sackboy/Running_Anim
+MRUItem28=/Game/Model/Sackboy/Sackboy_SkeMesh
+MRUItem29=/Game/Animation/Sackboy/Happy_Idle_Anim
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -3498,6 +3501,7 @@ TextRenderComponent.Cooking=True
 TextRenderComponent.Events=True
 TextRenderComponent.Materials=True
 Area_BP_C.Default=True
+Puppet_BP_C.WorldPartition=True
 
 [MessageLog]
 LastLogListing=PIE
@@ -3650,6 +3654,7 @@ UdpMessagingSettings=True
 /Game/Blueprints/Planet3_BP.Planet3_BP=0
 /Game/Blueprints/Button_BP.Button_BP=0
 /Game/Blueprints/Area_BP.Area_BP=0
+/Game/Blueprints/Camera_BP.Camera_BP=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
