--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/OpenWorld
 GameInstanceClass=/Game/Blueprints/GameInstance_BP.GameInstance_BP_C
-EditorStartupMap=/Game/Maps/Maze.Maze
+EditorStartupMap=/Game/Maps/Menu.Menu
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
